--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,7 @@ version: ${project.version}
 main: com.rosemite.RandomItems
 api-version: 1.16
 authors: [ SolomonRosemite ]
+commands:
+  items:
+  save:
+  c:
